# CNAFAtm

./: .gitignore  README.md  df.list  file.list  user.txt
Examples/: read_detsim.cc
Examples/BaseEvent/Event/: EventObject.h  HeaderObject.h
Examples/BaseEvent/src/: EventObjectDict.cc  EventObjectDict_rdict.pcm  HeaderObjectDict.cc  HeaderObjectDict_rdict.pcm
Examples/EDMUtil/src/: FileMetaDataDict.cc  FileMetaDataDict_rdict.pcm  JobInfoDict.cc  JobInfoDict_rdict.pcm  JunoEDMDefinitions.cc  SmartRefDict.cc  SmartRefDict_rdict.pcm  UniqueIDTableDict.cc  UniqueIDTableDict_rdict.pcm
Examples/SimEvent/src/: SimHeaderDict.cc  SimHeaderDict_rdict.pcm  SimTTHitDict.cc  SimTrackDict.cc  SimTrackDict_rdict.pcm
Examples/SimEvent/tests/: TestRead.cc  alias.C
Examples/src/: SimEventDict.cc  SimEventDict_rdict.pcm  SimPMTHitDict.cc  SimPMTHitDict_rdict.pcm  SimTTHitDict_rdict.pcm
Examples/tests/: TestRead.cc
Project/AtmJUNO/: AtmJUNO.cc  AtmJUNO.h  CMakeLists.txt
Project/AtmJUNO/cmt/: requirements
Project/AtmJUNO/include/: AtmSelector.h  AtmSlector.h
Project/AtmJUNO/src/: AtmSelector.cc  AtmSlector.C  RecTimeLikeAlg.cc
Project/Jobs/: CNAF.sh  CNAF_Atm.sh  CNAF_Atm1.sh  Ge_CNAF_jobs.sh  NPETE.sub
Project/Jobs/CondorSub/: GeSub.sh  NPETE.sh  NPETE.sub  NPETE1.sh  NPETE1.sub  NPETE_1.sub  NPETE_50.sh  NPETE_50.sub  NPETE_50_1.sh  NPETE_50_1.sub  NPETE_50_51.sh  NPETE_50_51.sub  ReSub.sh  ReSub_50.sh  TranfData.sh
Project/Py_AtmJUNO/: AtmJUNO.py
src_sgiulio/: Data.C  Data.C~  compile.sh
src_sgiulio/Before/: Data.h  main.cpp  srtutils.cc
(+394 files in other folders)
